--- a/src/scss/_rules.scss
+++ b/src/scss/_rules.scss
@@ -1,16 +1,18 @@
 .rules {
     display: none;
     position: absolute;
-    height: 400px;
-    width: 400px;
+    height: 60%;
+    width: 30%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
     &__header {
         display: flex;
-        padding: 20px;
+        padding: 1.5em;
         position: relative;
+        height: 10%;
+        width: 88%;
 
         h1 {
             margin: 0;
@@ -21,11 +23,11 @@
         }
 
         img {
-            width: 20px;
-            height: 20px;
+            width: 6%;
+            height: 27%;
             align-self: center;
             position: absolute;
-            right: 20px;
+            right: 1.5em;
             cursor: pointer;
             transition: all 1s;
 
@@ -38,6 +40,8 @@
 
     &__image {
         position: absolute;
+        height: 70%;
+        width: 75%;
         top: 70%;
         left: 50%;
         transform: translate(-50%, -70%);
@@ -62,7 +66,7 @@
         background: $elements_bg-color;
         height: 100%;
         width: 100%;
-        border-radius: 10px;
+        border-radius: 0.8em;
         z-index: -1;
         position: absolute;
         top: 0;
