--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -149,6 +149,11 @@ header img {
           box-shadow: 0 0.5em #9e1531;
 }
 
+.disappear {
+  -webkit-animation: disappear 1.5s 1;
+          animation: disappear 1.5s 1;
+}
+
 .image {
   height: 100%;
   width: 100%;
@@ -190,6 +195,24 @@ header img {
 .rules-btn:hover {
   -webkit-filter: brightness(50%);
           filter: brightness(50%);
+}
+
+@-webkit-keyframes disappear {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes disappear {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
 
 .rules {
@@ -367,8 +390,8 @@ header img {
   width: 100%;
   position: relative;
   display: none;
-  -webkit-animation: appears 1s 1;
-          animation: appears 1s 1;
+  -webkit-animation: appears 1.5s 1;
+          animation: appears 1.5s 1;
 }
 
 .choice-placement .options__icon {
@@ -386,6 +409,11 @@ header img {
 
 .choice-placement .image {
   background-position: 32% 32%;
+}
+
+.appears {
+  -webkit-animation: appears 1s 1;
+          animation: appears 1s 1;
 }
 
 .result {
