styles added for 640px width screens

--- a/src/scss/_game.scss
+++ b/src/scss/_game.scss
@@ -118,7 +118,7 @@
         color: $elements_bg-color;
         font-family: $main-font;
         text-transform: uppercase;
-        font-size: 50px;
+        font-size: 3.1em;
     }
 
     button {
@@ -127,8 +127,8 @@
         text-transform: uppercase;
         font: 600 15px $main-font;
         letter-spacing: 2px;
-        height: 42px;
-        width: 200px;
+        height: 2.5em;
+        width: 70%;
         border-radius: 5px;
         border: none;
 
