styles added for 480px width screens

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -40,3 +40,9 @@ $elements_bg-color: #f8f8f8;
         @content;
     }
 }
+
+@mixin screen__xs {
+    @media screen and (max-width: 480px) {
+        @content;
+    }
+}
