--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -191,6 +191,96 @@
     }
 }
 
+@include screen__xs {
+    header {
+        width: 80%;
+        height: 10%;
+
+        img {
+            height: 150%;
+        }
+    }
+    footer {
+        width: 52%;
+    }
+    .score-box {
+        width: 25%;
+        height: 80%;
+
+        &__text {
+            top: 5%;
+            .points {
+                font-size: 3rem;
+            }
+        }
+    }
+    .options {
+        width: 140%;
+        left: 42%;
+    }
+    .rules {
+        width: 75%;
+    }
+
+    .rules-btn {
+        width: 50%;
+        left: 50%;
+        transform: translate(-50%);
+        top: 110%;
+    }
+    .result {
+        left: 50%;
+        transform: translate(-50%);
+        width: 100%;
+        top: 65%;
+
+        &__header {
+            position: relative;
+            left: 0;
+
+            button {
+                width: 100%;
+            }
+        }
+    }
+
+    .game {
+        top: -7%;
+        height: 85%;
+        &__computer {
+            p {
+                width: 135%;
+                right: 10%;
+                font-size: 1rem;
+                top: 10%;
+            }
+        }
+        &__user {
+            p {
+                position: relative;
+                right: 15%;
+                font-size: 1rem;
+                top: 10%;
+            }
+        }
+    }
+
+    .choice-placement {
+        width: 110%;
+        height: 45%;
+        left: 0;
+        top: 12%;
+    }
+    .user-choice {
+        top: 31%;
+        .options__icon {
+            width: 110%;
+            right: 40%;
+            height: 45%;
+        }
+    }
+}
+
 @keyframes move-left__m {
     from {
         right: 10%;
