--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -42,6 +42,12 @@ $elements_bg-color: #f8f8f8;
 }
 
 @mixin screen__xs {
+    @media screen and (max-width: 600px) {
+        @content;
+    }
+}
+
+@mixin screen__xxs {
     @media screen and (max-width: 480px) {
         @content;
     }
