--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -126,6 +126,7 @@
     .options {
         left: 46%;
         background-position: 10% 0;
+        width: 100%;
         &__icon {
             width: 40%;
             height: 37%;
@@ -215,7 +216,8 @@
         }
     }
     .options {
-        width: 140%;
+        // width: 130%;
+        height: 90%;
         left: 42%;
     }
     .rules {
@@ -278,6 +280,34 @@
             right: 40%;
             height: 45%;
         }
+    }
+}
+
+@include screen__xxs {
+    .options {
+        width: 130%;
+    }
+
+    footer {
+        left: 75%;
+        transform: translate(-75%);
+        width: 55%;
+    }
+
+    .rules-btn {
+        width: 70%;
+    }
+
+    .game {
+        &__computer {
+            p {
+                width: 140%;
+            }
+        }
+    }
+
+    .choice-placement {
+        top: 13%;
     }
 }
 
